2007-09-02  Donal K. Fellows  <dkf@users.sf.net>

	* doc/lsearch.n: Added note that order of results with the -all option
	is that of the input list. It always was, but this makes it crystal.

2007-08-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c:	Added fflush() calls following all callers of
	* generic/tclExecute.c:	TclPrintByteCodeObj() so that tcl_traceCompile
	output is less likely to get mangled when writes to stdout interleave
	with other code.

2007-08-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Use a table lookup in ParseLexeme()
	to determine lexemes with single-byte representations.

	* generic/tclBasic.c:	Used unions to better clarify overloading of
	* generic/tclCompExpr.c:	the fields of the OpCmdInfo and
	* generic/tclCompile.h:		TclOpCmdClientData structs.

2007-08-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Call TclCompileSyntaxError() when
	expression syntax errors are found when compiling expressions.  With
	this in place, convert TclCompileExpr to return void, since there's no
	longer any need to report TCL_ERROR.
	* generic/tclCompile.c:	Update callers.
	* generic/tclExecute.c:

	* generic/tclCompCmds.c:	New routine TclCompileSyntaxError()
	* generic/tclCompile.h:	to directly compile bytecodes that report a
	* generic/tclCompile.c:	syntax error, rather than (ab)use a call to
	TclCompileReturnCmd.  Also, undo the most recent commit that papered
	over some issues with that (ab)use.  New routine produces a new
	opcode INST_SYNTAX, which is a minor variation of INST_RETURN_IMM.
	Also a bit of constification.

	* generic/tclCompile.c:	Move the deallocation of local LiteralTable
	* generic/tclCompExpr.c:	entries into TclFreeCompileEnv().
	* generic/tclExecute.c:	Update callers.

	* generic/tclCompExpr.c:	Force numeric and boolean literals
	in expressions to register with their intreps intact, even if that
	means overwriting existing intreps in already registered literals.
